--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12</version>
                 <configuration>
                     <parallel>classes</parallel>
                     <threadCount>2</threadCount>
